kubernetes/istio/peerauthentication.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: disable-mtls
  namespace: deepseek
spec:
  mtls:
    mode: DISABLE
