kubernetes/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: app-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "k8s-istiosys-ingressg-36f5a3585e-d34dd49c21a00f53.elb.ap-northeast-2.amazonaws.com"
