kubernetes/istio/destination-rule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app-destination
  namespace: app
spec:
  host: app-svc.app.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
